Fixes for generic type arguments and their annotations (#8630)
This PR includes:

* Rewrite of the generics in ClassElement AST for Java/Groovy - that fixed some pending tests, allowed to read annotations on the generic arguments
* Limiting generics recursion by replacing the action type argument with Object

Work is still required to:

* KSP needs to have similar changes
* Groovy needs some work to allow to read the generic argument annotations
* Probably some extra work to support TYPE annotations for Java
---------

Co-authored-by: Andriy Dmytruk <andriy.dmytruk@oracle.com>